Tue Sep 25 06:46:03 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/enquire.h: Mark MSetIterator::at_end() and
	  ESetIterator::at_end() as @private @internal so that they don't
	  appear in the API docs.

Tue Sep 25 06:45:07 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/enquire.h: Remove FIXMEs about converting MSetIterator
	  and ESetIterator to use Internal classes - as HACKING notes, the
	  current implementation is that way for performance reasons.

Tue Sep 25 06:36:37 GMT 2012  Olly Betts <olly@survex.com>

	* tests/harness/unixcmds.cc: Escape filenames on POSIX platforms by
	  wrapping in single quotes and specially handling single quotes in
	  the filename - previously newlines in filenames got eaten by the
	  shell.

Tue Sep 25 06:32:36 GMT 2012  Olly Betts <olly@survex.com>

	* tests/harness/unixcmds.cc: Protect filenames which start with '-' on
	  MS Windows like we already do on other platforms.  The built-in
	  commands generally only interpret '/' as the character introducing a
	  command line option (which we already convert to '\'), but many
	  ported programs understand '-' too/instead.

Sat Aug 25 16:09:50 GMT 2012  Dan Colish <dcolish@gmail.com>

	* include/xapian/enquire.h: Add function to test MSetIterator and
	  ESetIterator exhaustion against the size of the underlying interee
	  since comparison against an empty Itor is not suitable for an
	  exhaustion test. Add FIXME that these Iterators should use an Internal
	  class. 

Thu Aug 09 21:50:52 GMT 2012  Dan Colish <dcolish@gmail.com>

	* weight/weightinternal.h: Include config.h since macros are used
	  from it. 

Wed Aug 08 15:40:38 GMT 2012  Dan Colish <dcolish@gmail.com>

	* api/queryvector.h: Backout previous fix. When compiling with -O0,
	  increase the stack limit to > 8M when running scalability tests.

Wed Aug 08 02:10:21 GMT 2012  Dan Colish <dcolish@gmail.com>

	* api/queryvector.h: Fix SIGBUS when clearing QueryVectors
