@@ -1,4 +1,5 @@
 noinst_HEADERS +=\
+	common/append_filename_arg.h\
 	common/autoptr.h\
 	common/bitstream.h\
 	common/closefrom.h\
